# ocl-examples

./: CMakeLists.txt  README.md
blas/: CMakeLists.txt  blas.c
cmake/: FindOpenCL.cmake
common/: CMakeLists.txt  ocllib.c  ocllib.h  utils.c  utils.h
fft/: CMakeLists.txt  Makefile  fft.c  lena.pgm  mask.pgm
gauss/: CMakeLists.txt  gauss.c  gauss.cl  lena.pgm
interpolation/: CMakeLists.txt  Makefile  cmake_install.cmake  interpolation.c  interpolation.cl
matrix/: CMakeLists.txt  Makefile  matrix.c  matrix.cl
reduce/: CMakeLists.txt  Makefile  reduce.c  reduce.cl
sync/: CMakeLists.txt  Makefile  sync.c  sync.cl
transpose/: CMakeLists.txt  comp.c  comp.cl
